<resources>
    <string name="app_name">DatabaseExample</string>
    <string name="action_add_user">Add User</string>
    <string name="action_add_notes">Add Notes</string>
    <string name="text_first_name">First name : </string>
    <string name="text_last_name">Last name : </string>
    <string name="hint_firstname">Enter your firstname</string>
    <string name="hint_lastname">Enter your lastname</string>
    <string name="text_email">Email :</string>
    <string name="hint_email">Enter your email id</string>
    <string name="menu_action_add">Add</string>
    <string name="text_success_add_user">User added successfully.</string>
    <string name="text_failure_add_user">Failed to add User.</string>
    <string name="text_first_name_error">Please Enter first name.</string>
    <string name="text_last_name_error">Please Enter lastname.</string>
    <string name="text_email_error">Please Enter email address.</string>
    <string name="title_add_user">Add User</string>
    <string name="hint_description">Description</string>
    <string name="hint_title">Title</string>
    <string name="text_success_add_notes">Notes added successfully.</string>
    <string name="text_failure_add_notes">Failed to add notes.</string>
    <string name="text_description_error">Please enter description.</string>
    <string name="text_title_error">Please enter title.</string>
    <string name="title_add_notes">Add Notes</string>
    <string name="text_choose_valid_user">Please choose valid User.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_settings">Settings</string>

    <string name="pref_staggered_grid" translatable="false">Staggered Grid LayoutManager</string>
    <string name="pref_linear_layout" translatable="false">Linear LayoutManager</string>
    <string name="pref_staggered_grid_value" translatable="false">staggered_grid_layoutmanager</string>
    <string name="pref_linear_layout_value" translatable="false">linear_layoutmanager</string>
    <string name="pref_key_layout_manager">layout_manager</string>
    <string name="pref_title_layout_manager">Layout style for Notes</string>
    <string name="title_drinking_water">Drinking Water</string>
    <string name="drinking_reminder_notification_title">Where\'s that water?</string>
    <string name="drinking_reminder_notification_text">Press to record drinking water</string>
    <string name="drinking_reminder_notification_body">Take whatever number of sip you want but its necessary for your better health.</string>
    <string name="menu_drinking_water">Drink</string>
    <string name="battery_status">Battery Status</string>
</resources>
