<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/cl_rootview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/text_first_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_lastname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_firstname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/et_firstname"
        style="@style/MyEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_firstname"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_firstname"
        app:layout_constraintBottom_toBottomOf="@+id/tv_firstname"
        app:layout_constraintLeft_toRightOf="@+id/tv_firstname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/text_last_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_firstname"
        app:layout_constraintRight_toLeftOf="@+id/et_lastname"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstname"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/et_lastname"
        style="@style/MyEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_lastname"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_lastname"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lastname"
        app:layout_constraintLeft_toLeftOf="@+id/et_firstname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_lastname"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/text_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_lastname"
        app:layout_constraintRight_toLeftOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_lastname"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/et_email"
        style="@style/MyEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/et_lastname"
        app:layout_constraintRight_toRightOf="@+id/et_lastname"
        app:layout_constraintTop_toTopOf="@+id/tv_email"
        app:layout_constraintVertical_bias="0.0"/>

    <FrameLayout
        android:id="@+id/fl_progress_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>